--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 id="demo">Hello World</h1>
+    <!-- <h1 id="demo">Hello World</h1> -->
 
     <!-- <table>
         <tr>
@@ -43,6 +43,108 @@
             <th id="total_Percentage">totalPercentage</th>
         </tr>
     </table> -->
+
+
+    <!-- Chapter 43 to 48 -->
+
+    <!-- Question Number 1 -->
+
+    <!-- <button onclick="sayGreeting()">Click</button> -->
+
+    <!-- Question Number 2 -->
+
+    <!-- <h1>Mobile Phone Lookup</h1>
+    <div style="max-width: 1200px;display: flex;justify-content: space-evenly;">
+        <div style="width: 25%;"><img onclick="myFunction()" style="width: 90%; height: 250px;border: 1px solid black;" src="./images/iphone-Xr.jpg" alt="">
+            <h4>Iphone Xr</h4>
+        </div>
+        <div style="width: 25%;"><img onclick="myFunction()" style="width: 90%; height: 250px;border: 1px solid black;" src="./images/oneplus-nord.png" alt="">
+            <h4>Oneplus Nord</h4>
+        </div>
+        <div style="width: 25%;"><img onclick="myFunction()" style="width: 90%; height: 250px;border: 1px solid black;" src="./images/samsung-galaxy-s10-lite.jpg" alt="">
+            <h4>Samsung Galaxy S10 Lite</h4>
+        </div>
+        <div style="width: 25%;"><img onclick="myFunction()" style="width: 90%; height: 250px;border: 1px solid black;" src="./images/vivo.jpg" alt="">
+            <h4>Vivo V9</h4>
+        </div>
+    </div> -->
+
+    <!-- Question Number 3 -->
+
+    <!-- <table>
+        <tr>
+            <th>Index</th>
+            <th>Name</th>
+            <th>Class</th>
+            <th></th>
+        </tr>
+    </table> -->
+
+    <!-- Question Number 4 -->
+
+    <!-- <img style="display: block;margin: auto;border: 1px solid;width: 50%;height: 250px;" src="./images/iphone-Xr.jpg" onmouseover="changeImage(this,'images/vivo.jpg')" onmouseout="changeImage(this,'images/iphone-Xr.jpg')"> -->
+
+    <!-- Question Number 5 -->
+
+    <!-- <h1>Counter : <span id="counter"></span></h1>
+
+    <button onclick="incraese()">Increase</button>
+    <button onclick="decrease()">Decrease</button> -->
+
+    <!-- Chapter 49 to 52 -->
+
+    <!-- Question Number 1 -->
+    <!-- <h1>Form</h1>
+    <form action="#">
+        <input type="text" placeholder="Enter your name" id="name">
+        <input type="date" placeholder="Enter your age" id="date-of-birth">
+        <input type="submit" value="Submit">
+    </form>
+    <div id="show-data">
+        <h2></h2>
+        <div id="show-name"></div>
+        <div id="show-date-of-birth"></div>
+    </div> -->
+
+
+    <!-- Question Number 2 -->
+    <!-- <p id="para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id, nemo. Consequuntur iusto alias ipsam
+        cupiditate vero illo ut facere voluptatum, laboriosam asperiores. Corporis error ab rem fugiat commodi!
+        Molestias, provident.
+        <button id="see-more">See More</button>
+    </p> -->
+
+    <!-- Question Number 3 -->
+
+    <!-- Adding form -->
+    <!-- <Form action="#">
+        <label for="name">Name</label>
+        <input type="text" id="name">
+        <label for="class">Class</label>
+        <input type="text" id="class">
+        <button id="btn">Save</button>
+    </Form>
+
+
+    <h1>Save Record</h1>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Class</th>
+            <th style="border: hidden;"></th>
+        </tr>
+    </table>  -->
+
+
+    <!-- Chapter 52 to 57  -->
+
+    <!-- Question Number 1 -->
+    <div class="main">
+    </div>
+
+    <div class="model-image">
+        <img src="./images/4.png" alt="">
+    </div>
 
 
     <script src="app.js"></script>
